tests/purs/failing/CannotDeriveNewtypeForData.out
Error found:
at tests/purs/failing/CannotDeriveNewtypeForData.purs:6:1 - 6:24 (line 6, column 1 - line 6, column 24)

  Cannot derive an instance of the [33mNewtype[0m class for non-newtype [33mTest[0m.


See https://github.com/purescript/documentation/blob/master/errors/CannotDeriveNewtypeForData.md for more information,
or to contribute content related to this error.

